# OpenGLProject

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  RenderEngine.cpp  RenderEngine.h  main.cpp
source/assets/shaders/: specularMap.frag  specularMap.vert
source/assets/shaders/cube/: cube.frag  texturedCube.frag  texturedCube.vert
source/assets/shaders/light maps/: shader.frag  shader.vert
source/components/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  Window.cpp  Window.h
source/components/lighting/sources/: LightSource.cpp  LightSource.h
source/components/model loading/: Mesh.cpp  Mesh.h  Model.h  StructData.h
source/components/objects/: Object.cpp  Object.h  RawObject.cpp  RawObject.h  Texture.h  VAO.h
source/components/objects/indices/: VBO.h
source/components/objects/lighting/: LightMaterial.h  LightObject.cpp  LightObject.h  LightSource.cpp  LightSource.h
source/components/objects/raw/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
source/components/objects/textures/: Texture.cpp  Texture.h
source/helpers/: FileIO.cpp  FileIO.h  Math.cpp  Math.h
source/scenes/: AssimpScene.cpp  AssimpScene.h  LightingScene.cpp  LightingScene.h  Scene1.cpp  Scene1.h  cube.h
source/shaders/: cube.frag  cube.vert  fragment.frag  vertex.vert
source/shaders/old/: cubeFragment.frag  fragment.frag  vertex.vert
tests/: CMakeLists.txt
tests/lightingTest/: CMakeLists.txt  LightingScene.cpp  LightingScene.h  main.cpp
