project(OpenGLProject)

add_library(${PROJECT_NAME} SHARED components/ShaderProgram.cpp components/ShaderProgram.h helpers/FileIO.h helpers/FileIO.cpp components/Window.cpp components/Window.h components/objects/textures/Texture.cpp components/objects/textures/Texture.h components/objects/raw/VAO.cpp components/objects/raw/VAO.h components/objects/raw/EBO.cpp components/objects/raw/EBO.h components/objects/raw/VBO.cpp components/objects/raw/VBO.h components/Camera.cpp components/Camera.h components/objects/Object.cpp components/objects/Object.h components/objects/RawObject.cpp components/objects/RawObject.h RenderEngine.cpp RenderEngine.h components/ShaderManager.cpp components/ShaderManager.h components/lighting/sources/LightSource.cpp components/lighting/sources/LightSource.h helpers/Math.cpp helpers/Math.h)
